--- a/docs/source/DLPFC_151507_Tutorial.ipynb
+++ b/docs/source/DLPFC_151507_Tutorial.ipynb
@@ -28,8 +28,8 @@
    "id": "4cd24de2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:06:45.979872Z",
-     "start_time": "2022-09-10T03:06:44.785964Z"
+     "end_time": "2022-10-10T04:11:16.923481Z",
+     "start_time": "2022-10-10T04:11:15.765072Z"
     }
    },
    "outputs": [],
@@ -49,8 +49,8 @@
    "id": "6835e1cc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:06:45.990796Z",
-     "start_time": "2022-09-10T03:06:45.980969Z"
+     "end_time": "2022-10-10T04:11:17.520129Z",
+     "start_time": "2022-10-10T04:11:17.504998Z"
     }
    },
    "outputs": [],
@@ -75,8 +75,8 @@
    "id": "001aa3b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:06:45.993152Z",
-     "start_time": "2022-09-10T03:06:45.991611Z"
+     "end_time": "2022-10-10T04:11:18.571307Z",
+     "start_time": "2022-10-10T04:11:18.568887Z"
     }
    },
    "outputs": [],
@@ -90,8 +90,8 @@
    "id": "e27f5497",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:06:47.365792Z",
-     "start_time": "2022-09-10T03:06:45.994115Z"
+     "end_time": "2022-10-10T04:11:25.956615Z",
+     "start_time": "2022-10-10T04:11:18.970905Z"
     }
    },
    "outputs": [
@@ -143,8 +143,8 @@
    "id": "4ea1c8f7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:06:47.499155Z",
-     "start_time": "2022-09-10T03:06:47.366586Z"
+     "end_time": "2022-10-10T04:11:26.082023Z",
+     "start_time": "2022-10-10T04:11:25.957770Z"
     }
    },
    "outputs": [],
@@ -167,8 +167,8 @@
    "id": "f680fb00",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:06:55.261443Z",
-     "start_time": "2022-09-10T03:06:47.499979Z"
+     "end_time": "2022-10-10T04:11:36.352496Z",
+     "start_time": "2022-10-10T04:11:26.082963Z"
     }
    },
    "outputs": [],
@@ -190,8 +190,8 @@
    "id": "f430663e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:06:57.048746Z",
-     "start_time": "2022-09-10T03:06:55.262469Z"
+     "end_time": "2022-10-10T04:11:37.984063Z",
+     "start_time": "2022-10-10T04:11:36.353878Z"
     }
    },
    "outputs": [],
@@ -213,8 +213,8 @@
    "id": "38595f03",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:07:31.638116Z",
-     "start_time": "2022-09-10T03:06:57.049876Z"
+     "end_time": "2022-10-10T04:12:08.514530Z",
+     "start_time": "2022-10-10T04:11:37.985099Z"
     }
    },
    "outputs": [
@@ -222,27 +222,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This dataset is small enough to train without Ripplewalk_sampler\n",
-      "Epoch:10 Time:1.81s Loss: 10.333547\n",
-      "Epoch:20 Time:1.47s Loss: 5.293159\n",
-      "Epoch:30 Time:1.47s Loss: 4.258145\n",
-      "Epoch:40 Time:1.47s Loss: 3.576831\n",
-      "Epoch:50 Time:1.47s Loss: 3.029965\n",
-      "Epoch:60 Time:1.47s Loss: 2.537145\n",
-      "Epoch:70 Time:1.48s Loss: 2.100832\n",
-      "Epoch:80 Time:1.53s Loss: 1.688188\n",
-      "Epoch:90 Time:1.56s Loss: 1.329933\n",
-      "Epoch:100 Time:1.70s Loss: 1.015258\n",
-      "Epoch:110 Time:1.73s Loss: 0.735683\n",
-      "Epoch:120 Time:1.63s Loss: 0.554344\n",
-      "Epoch:130 Time:1.71s Loss: 0.422745\n",
-      "Epoch:140 Time:1.71s Loss: 0.343069\n",
-      "Epoch:150 Time:1.65s Loss: 0.288764\n",
-      "Epoch:160 Time:1.73s Loss: 0.252488\n",
-      "Epoch:170 Time:1.75s Loss: 0.229762\n",
-      "Epoch:180 Time:1.74s Loss: 0.211366\n",
-      "Epoch:190 Time:1.70s Loss: 0.198916\n",
-      "Epoch:200 Time:1.67s Loss: 0.188105\n",
+      "This dataset is smaller than batchsize so that ripple walk sampler is not used!\n",
+      "Epoch:10 Time:1.72s Loss: 10.333547\n",
+      "Epoch:20 Time:1.43s Loss: 5.293159\n",
+      "Epoch:30 Time:1.42s Loss: 4.258145\n",
+      "Epoch:40 Time:1.42s Loss: 3.576831\n",
+      "Epoch:50 Time:1.41s Loss: 3.029965\n",
+      "Epoch:60 Time:1.42s Loss: 2.537145\n",
+      "Epoch:70 Time:1.43s Loss: 2.100832\n",
+      "Epoch:80 Time:1.44s Loss: 1.688188\n",
+      "Epoch:90 Time:1.44s Loss: 1.329933\n",
+      "Epoch:100 Time:1.44s Loss: 1.015258\n",
+      "Epoch:110 Time:1.42s Loss: 0.735683\n",
+      "Epoch:120 Time:1.43s Loss: 0.554344\n",
+      "Epoch:130 Time:1.43s Loss: 0.422745\n",
+      "Epoch:140 Time:1.43s Loss: 0.343069\n",
+      "Epoch:150 Time:1.42s Loss: 0.288764\n",
+      "Epoch:160 Time:1.43s Loss: 0.252488\n",
+      "Epoch:170 Time:1.43s Loss: 0.229762\n",
+      "Epoch:180 Time:1.43s Loss: 0.211366\n",
+      "Epoch:190 Time:1.43s Loss: 0.198916\n",
+      "Epoch:200 Time:1.43s Loss: 0.188105\n",
       "Model Converge\n"
      ]
     }
@@ -265,8 +265,8 @@
    "id": "644c1dfb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:07:32.223328Z",
-     "start_time": "2022-09-10T03:07:31.639001Z"
+     "end_time": "2022-10-10T04:12:08.721770Z",
+     "start_time": "2022-10-10T04:12:08.515462Z"
     }
    },
    "outputs": [],
@@ -288,8 +288,8 @@
    "id": "1da5955e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:07:47.735935Z",
-     "start_time": "2022-09-10T03:07:32.224827Z"
+     "end_time": "2022-10-10T04:12:23.154566Z",
+     "start_time": "2022-10-10T04:12:08.722716Z"
     }
    },
    "outputs": [
@@ -326,6 +326,55 @@
    "metadata": {},
    "source": [
     "Evaluation of latent embedding and spatial clustering results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7b61c02d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-10T07:19:48.821469Z",
+     "start_time": "2022-10-10T07:19:47.594286Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation score:\t\tAcc: 0.895, K: 0.871, mF1: 0.874, wF1: 0.894\n",
+      "Mclust metrics:\t\t"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "labels_true must be 1D: shape is ()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3032/2398382360.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Acc: %.3f, K: %.3f, mF1: %.3f, wF1: %.3f\"\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0macc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkappa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmf1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwf1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Mclust metrics:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\\t\\t\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mari\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mami\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnmi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfmi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcomp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhomo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpast\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcluster_metrics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"ManualAnnotation\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"mclust\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ARI: %.3f, AMI: %.3f, NMI: %.3f, FMI:%.3f, Comp: %.3f, Homo: %.3f\"\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mari\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mami\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnmi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfmi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcomp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Dlouvain metrics:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\\t\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/torch1.9/lib/python3.8/site-packages/past/Evaluation.py\u001b[0m in \u001b[0;36mcluster_metrics\u001b[0;34m(adata, target, pred)\u001b[0m\n\u001b[1;32m    350\u001b[0m     \"\"\"\n\u001b[1;32m    351\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 352\u001b[0;31m     \u001b[0mari\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0madjusted_rand_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    353\u001b[0m     \u001b[0mnmi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnormalized_mutual_info_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    354\u001b[0m     \u001b[0mami\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0madjusted_mutual_info_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/torch1.9/lib/python3.8/site-packages/sklearn/metrics/cluster/_supervised.py\u001b[0m in \u001b[0;36madjusted_rand_score\u001b[0;34m(labels_true, labels_pred)\u001b[0m\n\u001b[1;32m    388\u001b[0m     \u001b[0madjusted_mutual_info_score\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mAdjusted\u001b[0m \u001b[0mMutual\u001b[0m \u001b[0mInformation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    389\u001b[0m     \"\"\"\n\u001b[0;32m--> 390\u001b[0;31m     \u001b[0;34m(\u001b[0m\u001b[0mtn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtp\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpair_confusion_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    391\u001b[0m     \u001b[0;31m# convert to Python integer types, to avoid overflow or underflow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    392\u001b[0m     \u001b[0mtn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/torch1.9/lib/python3.8/site-packages/sklearn/metrics/cluster/_supervised.py\u001b[0m in \u001b[0;36mpair_confusion_matrix\u001b[0;34m(labels_true, labels_pred)\u001b[0m\n\u001b[1;32m    219\u001b[0m       \u001b[0mhttps\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0mlink\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspringer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcom\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0marticle\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m10.1007\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0mFBF01908075\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m     \"\"\"\n\u001b[0;32m--> 221\u001b[0;31m     \u001b[0mlabels_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_clusterings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    222\u001b[0m     \u001b[0mn_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint64\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels_true\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/torch1.9/lib/python3.8/site-packages/sklearn/metrics/cluster/_supervised.py\u001b[0m in \u001b[0;36mcheck_clusterings\u001b[0;34m(labels_true, labels_pred)\u001b[0m\n\u001b[1;32m     66\u001b[0m     \u001b[0;31m# input checks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlabels_true\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"labels_true must be 1D: shape is %r\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlabels_true\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlabels_pred\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"labels_pred must be 1D: shape is %r\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlabels_pred\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: labels_true must be 1D: shape is ()"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Cross-validation score:\", end=\"\\t\\t\")\n",
+    "acc, kappa, mf1, wf1 = past.svm_cross_validation(sdata.obsm[\"embedding\"], sdata.obs[\"ManualAnnotation\"])\n",
+    "print(\"Acc: %.3f, K: %.3f, mF1: %.3f, wF1: %.3f\"%(acc.mean(), kappa.mean(), mf1.mean(), wf1.mean()))\n",
+    "\n",
+    "print(\"Mclust metrics:\", end=\"\\t\\t\")\n",
+    "ari, ami, nmi, fmi, comp, homo = past.cluster_metrics(sdata, \"ManualAnnotation\", \"mclust\")\n",
+    "print(\"ARI: %.3f, AMI: %.3f, NMI: %.3f, FMI:%.3f, Comp: %.3f, Homo: %.3f\"%(ari, ami, nmi, fmi, comp, homo))\n",
+    "\n",
+    "print(\"Dlouvain metrics:\", end=\"\\t\")\n",
+    "ari, ami, nmi, fmi, comp, homo = past.cluster_metrics(sdata, \"ManualAnnotation\", \"Dlouvain\")\n",
+    "print(\"ARI: %.3f, AMI: %.3f, NMI: %.3f, FMI:%.3f, Comp: %.3f, Homo: %.3f\"%(ari, ami, nmi, fmi, comp, homo))"
    ]
   },
   {
@@ -508,6 +557,9 @@
    ],
    "source": [
     "rdata = DLPFC[DLPFC.obs[\"sample_id\"]!=\"151507\", :]\n",
+    "rdata = integration(rdata, sdata)\n",
+    "rdata = preprocess(rdata, min_cells=None, target_sum=None, is_filter_MT=False, n_tops=None)\n",
+    "rdata = get_bulk(rdata, key=key)\n",
     "rdata"
    ]
   },
